WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273536
MediaCapabilities: webm/vp8 incorrectly report not supported
https://bugs.webkit.org/show_bug.cgi?id=273536
Summary
MediaCapabilities: webm/vp8 incorrectly report not supported
Jean-Yves Avenard [:jya]
Reported
2024-04-30 20:15:41 PDT
https://jyavenard.github.io/htmltests/tests/MediaCapabilities/1482847.html
query: 3: medias:media-source audio mimeType:audio/webm; codecs="opus"@48000Hz video mimeType:video/webm; codecs="vp8" @853x480 is NOT supported, NOT smooth and NOT power efficient. 4: medias:media-source audio mimeType:audio/webm; codecs="opus"@48000Hz video mimeType:video/webm; codecs="vp8" @1280x720 is NOT supported, NOT smooth and NOT power efficient. 4: medias:media-source audio mimeType:audio/webm; codecs="opus"@48000Hz video mimeType:video/webm; codecs="vp8" @1920x1080 is NOT supported, NOT smooth and NOT power efficient. 4: medias:media-source audio mimeType:audio/webm; codecs="opus"@48000Hz video mimeType:video/webm; codecs="vp8" @3840x2160 is NOT supported, NOT smooth and NOT power efficient. that's not right.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-30 20:16:06 PDT
<
rdar://problem/127339546
>
Ahmad Saleem
Comment 2
2026-03-04 14:18:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59923
EWS
Comment 3
2026-03-06 02:29:26 PST
Committed
308789@main
(27303fc4cbff): <
https://commits.webkit.org/308789@main
> Reviewed commits have been landed. Closing PR #59923 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug