MediaCapabilities.decodingInfo() incorrectly reports VP8 as not supported https://bugs.webkit.org/show_bug.cgi?id=273536 rdar://127339546

Reviewed by Jean-Yves Avenard.

The Cocoa MediaCapabilities factory in computeMediaCapabilitiesInfo() had no
handling for VP8 codec strings. The videoCodecTypeFromRFC4281Type() function
only recognized VP9 (vp09), so VP8 codec strings (vp8, vp8.0, vp08) fell
through to the final else clause and returned unsupported. This despite all
the VP8 decoder infrastructure already existing in VP9UtilitiesCocoa and
SourceBufferParserWebM.

Add a VP8 branch that recognizes VP8 codec strings, checks decoder
availability via isVP8DecoderAvailable(), validates codec parameters via
the existing isVPCodecConfigurationRecordSupported(), and reports
powerEfficient=false since VP8 is always software-decoded.

* Source/WebCore/platform/graphics/cocoa/PlatformMediaEngineConfigurationFactoryCocoa.cpp:
(WebCore::computeMediaCapabilitiesInfo):
* LayoutTests/media/mediacapabilities/vp8.html: Added.
* LayoutTests/media/mediacapabilities/vp8-expected.txt: Added.

Canonical link: https://commits.webkit.org/308789@main